INTERNAL-7 - Fix CR issues

--- a/app/design/frontend/Satoshi/Hyva/Magento_Newsletter/templates/subscribe.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Newsletter/templates/subscribe.phtml
@@ -35,7 +35,15 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         class="flex flex-col gap-3 items-stretch md:gap-4"
         action="<?= $escaper->escapeUrl($block->getFormActionUrl()) ?>"
         method="post"
-        x-data="initNewsletterForm()"
+        x-data="Newsletter({
+            recaptchaValidationCode: '<?= $escaper->escapeJS($recaptcha ? $recaptcha->getValidationJsHtml(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER) : '') ?>',
+            isCaptchaEnabled: Boolean(<?= $recaptcha ? $recaptcha->isCaptchaEnabledFor(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER) : '' ?>),
+            recaptchaSiteKey: '<?= $recaptcha ? $recaptcha->getSiteKey(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER) : '' ?>',
+            recaptchaFormIdNewsletter: '<?= ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER ?>',
+            recaptchaType: '<?= $recaptcha ? $recaptcha->getSelectedTypeForForm(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER) : '' ?>',
+            recaptchaV2InvisibleBadgePosition: '<?= $recaptcha ? $recaptcha->getRecaptchaV2InvisibleBadgePosition() : '' ?>',
+            defaultErrorMessage: '<?= __('Something went wrong with the subscription.') ?>'
+        })"
         @submit.prevent="submitForm()"
         id="newsletter-validate-detail"
         aria-label="<?= $escaper->escapeHtmlAttr(__('Subscribe to Newsletter')) ?>"
@@ -110,124 +118,4 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
             <?= $recaptcha ? $recaptcha->getLegalNoticeHtml(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER) : '' ?>
         </div>
     </form>
-    <script>
-        function initNewsletterForm() {
-            return {
-                isLoading: false,
-                formSubmissionErrorMessages: {},
-                formSubmissionSuccessMessage: '',
-                errors: 0,
-                hasCaptchaToken: 0,
-                displayErrorMessage: false,
-                errorMessages: [],
-                setErrorMessages(messages) {
-                    this.errorMessages = [messages]
-                    this.displayErrorMessage = this.errorMessages.length
-                },
-                clearFormSubmissionMessages() {
-                    this.formSubmissionErrorMessages = {};
-                    this.formSubmissionSuccessMessage = '';
-                },
-                submitForm() {
-                    // Do not rename $form, the variable is expected to be declared in the recaptcha output
-                    const $form = document.querySelector('#newsletter-validate-detail');
-                    <?= $recaptcha ? $recaptcha->getValidationJsHtml(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER) : '' ?>
-
-                    if (this.errors === 0) {
-                        const isCaptchaEnabled = Boolean(<?= $recaptcha ? $recaptcha->isCaptchaEnabledFor(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER) : '' ?>);
-                        const recaptchaSiteKey = '<?= $recaptcha ? $recaptcha->getSiteKey(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER) : '' ?>';
-                        const recaptchaFormIdNewsletter = '<?= ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER ?>';
-                        const recaptchaType = '<?= $recaptcha ? $recaptcha->getSelectedTypeForForm(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER) : '' ?>';
-                        const formData = new FormData($form);
-
-                        if (isCaptchaEnabled) {
-                            // Recaptcha v3
-                            if (recaptchaType === 'recaptcha_v3') {
-                                grecaptcha.ready(() => {
-                                    grecaptcha.execute(recaptchaSiteKey, {action: recaptchaFormIdNewsletter})
-                                        .then((token) => {
-                                            if (formData.has('g-recaptcha-response')) {
-                                                formData.delete('g-recaptcha-response');
-                                            }
-                                            formData.append('g-recaptcha-response', token);
-                                            this.subscribe(formData);
-                                        });
-                                });
-                            }
-                            // Recaptcha v2 checkbox
-                            else if (recaptchaType === 'recaptcha') {
-                                const token = grecaptcha.getResponse(window.grecaptchaInstanceNewsletter);
-                                if (formData.has('g-recaptcha-response')) {
-                                    formData.delete('g-recaptcha-response');
-                                }
-                                formData.append('g-recaptcha-response', token);
-                                this.subscribe(formData);
-                                grecaptcha.reset(window.grecaptchaInstanceNewsletter);
-                            }
-                            // Recaptcha v2 invisible
-                            else if (recaptchaType === 'invisible') {
-                                const badgePosition = '<?= $recaptcha ? $recaptcha->getRecaptchaV2InvisibleBadgePosition() : '' ?>';
-
-                                grecaptcha.execute(window.grecaptchaInstanceNewsletter).then(() => {
-                                    const token = grecaptcha.getResponse(window.grecaptchaInstanceNewsletter);
-
-                                    if (!token) {
-                                        return;
-                                    }
-
-                                    formData.set('g-recaptcha-response', token);
-                                    this.subscribe(formData);
-
-                                    const recaptchaElement = document.createElement('div');
-                                    const recaptchaElementId = 'grecaptcha-container-Newsletter';
-                                    recaptchaElement.id = recaptchaElementId;
-
-                                    const recaptchaContainer = document.getElementById('newsletter-recaptcha-container');
-                                    recaptchaContainer.innerHTML = '';
-                                    recaptchaContainer.appendChild(recaptchaElement);
-
-                                    // Re-render reCAPTCHA to have a new token for the next ajax call
-                                    window.grecaptchaInstanceNewsletter = grecaptcha.render(recaptchaElementId, {
-                                        sitekey: recaptchaSiteKey,
-                                        callback: 'googleRecaptchaCallbackNewsletter',
-                                        size: 'invisible',
-                                        badge: badgePosition,
-                                    });
-                                });
-                            }
-                        } else {
-                            this.subscribe(formData);
-                        }
-                    }
-                },
-                subscribe(formData) {
-                    const $form = document.querySelector('#newsletter-validate-detail');
-                    this.isLoading = true;
-                    this.clearFormSubmissionMessages();
-
-                    fetch($form.action, {
-                        method: 'POST',
-                        body: formData,
-                        headers: {
-                            'X-Requested-With': 'XMLHttpRequest'
-                        }
-                    })
-                    .then(response => response.json())
-                    .then(data => {
-                        if (data.success) {
-                            this.formSubmissionSuccessMessage = data.message;
-                        } else {
-                            this.formSubmissionErrorMessages[data.field] = data.message;
-                        }
-                    })
-                    .catch(() => {
-                        this.formSubmissionErrorMessages['email'] = '<?= __('Something went wrong with the subscription.') ?>';
-                    })
-                    .finally(() => {
-                        this.isLoading = false;
-                    });
-                }
-            }
-        }
-    </script>
 </div>
