INTERNAL-40; setting default sort option

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/toolbar.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/toolbar.phtml
@@ -16,6 +16,8 @@ $sortOptions = array_map(function ($option, $key) use ($escaper) {
         'name' => $escaper->escapeHtml($option),
     ];
 }, $availableOrders, array_keys($availableOrders));
+
+$defaultSort = $sortOptions[0]['value'] ?? $block->getCurrentOrder();
 ?>
 
 <form
@@ -28,7 +30,7 @@ $sortOptions = array_map(function ($option, $key) use ($escaper) {
     $template
         ->setData([
             'sortOptions' => $sortOptions,
-            'defaultSort' => $block->getCurrentOrder(),
+            'defaultSort' => $defaultSort,
         ])
         ->render('Magento_Catalog::html/_filter-sort.phtml');
     ?>
