--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/html/_filter-sort.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/html/_filter-sort.phtml
@@ -16,7 +16,7 @@ use Hyva\Theme\ViewModel\SvgIcons;
 $hyvaicons = $viewModels->require(SvgIcons::class);
 
 $sortOptions = $block->getData('sortOptions') ?? [];
-$defaultSort = $block->getData('defaultSort') ?: '';
+$defaultSort = $block->getData('defaultSort');
 $sortByLabel = $block->getData('sortByLabel') ?? 'Sort By';
 $sortByLabelForFilter = str_replace(' ', '-', strtolower($escaper->escapeHtml($sortByLabel)));
 
@@ -24,7 +24,7 @@ $sortByLabelForFilter = str_replace(' ', '-', strtolower($escaper->escapeHtml($s
 
 <fieldset
     class="flex-1 md:border-t md:border-bg-600 md:py-5"
-    x-data="Filters(<?= htmlspecialchars(json_encode($sortOptions), ENT_QUOTES, 'UTF-8') ?>, '<?= $defaultSort ?>')"
+    x-data="Filters(<?= $escaper->escapeHtml(json_encode($sortOptions)) ?>, '<?= $escaper->escapeHtml($defaultSort) ?>')"
     x-show="$store.main.isMobile ? currentName == '<?= $escaper->escapeHtml(__($sortByLabel)) ?>' : true"
 >
     <legend class="sr-only"><?= __($sortByLabel) ?></legend>
@@ -77,6 +77,15 @@ $sortByLabelForFilter = str_replace(' ', '-', strtolower($escaper->escapeHtml($s
                     <?php endforeach; ?>
                 </div>
             </div>
+
+            <button
+                x-show="getIsFilterSelected('product_list_order')"
+                type="button"
+                class="link link--primary mt-4 hidden md:inline-block"
+                @click="resetCurrent('filter-<?= $sortByLabelForFilter ?>')"
+            >
+                <?= __('Reset') ?>
+            </button>
         </div>
     </div>
 </fieldset>
