INTERNAL-40; added product_filter_sort block to sidebar.main container in catalog_category_view.xml

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_category_view.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_category_view.xml
@@ -16,5 +16,10 @@
         <referenceBlock name="category.description" remove="true" />
         <referenceBlock name="category.image" remove="true" />
         <referenceBlock name="category.cms" remove="true" />
+
+        <referenceContainer name="sidebar.main">
+            <block class="Magento\Catalog\Block\Product\ProductList\Toolbar" name="product_filter_sort"
+                   template="Magento_Catalog::product/html/filter-sort.phtml" before="-"/>
+        </referenceContainer>
     </body>
 </page>
